Added flex properties to recipe container.

--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -1,8 +1,10 @@
-<section id="recipes">
-    {{#each this}}
-        {{#if recipeName}}
-            <!-- invokes recipe partial from views/partials/recipe.handlebars -->
-            {{> recipe}}
-        {{/if}}
-    {{/each}}
-</section>
+<div class="container">
+    <section id="recipes" class="row">
+        {{#each this}}
+            {{#if recipeName}}
+                <!-- invokes recipe partial from views/partials/recipe.handlebars -->
+                {{> recipe}}
+            {{/if}}
+        {{/each}}
+    </section>
+</div>
