templatizing and JS WIP

--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -1,3 +1,7 @@
+{{> pitchBlock}}
+{{> jumbotron}}
+{{> addRecipe}}
+{{> contactModal}}
 <div class="container">
     <section id="recipes" class="row">
         {{#each this}}
@@ -8,3 +12,4 @@
         {{/each}}
     </section>
 </div>
+{{> footer}}
