--- a/public/custom.css
+++ b/public/custom.css
@@ -1,9 +1,8 @@
 html,
 body {
-  /* background gradient: blue color scheme */
-  background: #717171;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #717171, #8c8c8c);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #717171, #8c8c8c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #a65a2c;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #5b5439, #9d7a64);
+  background: linear-gradient(to right, #5b5439, #9d7a64);
   margin: auto 0;
 }
 
@@ -67,63 +66,65 @@ a, a:hover {
 }
 
 /* Pitch container styling */
-.pitch-container {
-  padding: 0 0 0 30px;
+#pitchBlock {
+  padding: 20px 0 20px 0;
+  margin: 0 auto;
+  width: 100%;
+  background-color: #ddc500;
 }
 
-.lead-1 {
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 24px;
-  text-align: center;
-  padding: 20px 0 10px 0;
+.lead {
+  width: 75%;
+  font-size: 24px;
+  font-weight: 500;
+  text-align: left;
+  padding: 20px 0 0 0;
+  margin: 0 auto;
+  line-height: 36px;
 }
 
-.lead-1 .accent {
-  font-size: 20px;
+.lead .hungryAgain {
+  font-size: 26px;
   font-weight: 700;
   font-family: 'Supermercado One', cursive;
-  line-height: 24px;
-  margin: 0 5px 0 0px;
+  padding: 10px;
+  line-height: 36px;
 }
 
-.lead-2 {
-  margin: 0 0 40px 0px;
-  font-size: 15px;
-  width: 400px;
-}
-
-.lead-2 .accent-2 {
-  font-size: 20px;
+.lead .accent-2 {
+  font-size: 26px;
   font-weight: 700;
   font-family: 'Supermercado One', cursive;
-  line-height: 26px;
+  line-height: 36px;
   margin: 0 5px 0 0;
 }
-
-.lil-break { width: 300px; }
 
 .whats-cooking {
   font-size: 40px;
   font-weight: 700;
-  padding: 10px;
   font-family: 'Supermercado One', cursive;
-  line-height: 1.2;
-  margin: 30px 0 0 0;
+  line-height: 36px;
   text-align: center;
+  padding: 20px 0 20px 0;
 }
 /* end of pitch container styling */
 
-.vertical-bar {
-  width: 10px;
-  height: 350px;
-  border-right:1px solid rgba(0,0,0,.1);
+/*******************
+   FILTERS STYLING
+*******************/
+.accent {
+  font-size: 30px;
+  font-weight: 700;
+  font-family: 'Solway', cursive;
+  line-height: 34px;
+  text-align: center;
+  padding: 20px 0 20px 0;
+  text-emphasis-style: circle;
+  text-emphasis-position: under right;
 }
 
-/* Filters Styling */
 .filters-container {
   margin: 0 0 0 50px;
-  width: 160px;
 }
 
 .filter-input-container {
@@ -187,25 +188,27 @@ a, a:hover {
   box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
 }
 
+.search-or-add {
+  font-size: 40px;
+  font-weight: 700;
+  font-family: 'Supermercado One', cursive;
+  line-height: 36px;
+  text-align: center;
+  padding: 20px 0 20px 0;
+}
+
 .jumbotron {
   /*height: 55vh;*/
-
-  /*
-  background: rgb(44,114,187);
-  background: linear-gradient(90deg, rgb(255, 255, 255) 21%, rgb(191, 191, 191) 100%);
-  color: #5f5f5f;
-  */
-  margin: -50px 0 25px 0;
-  padding: 80px 0 20px 0;
-  background: rgb(245, 215, 0);
+  margin: -15px 0 15px 0;
+  padding: 20px 0 20px 0;
+  background: #fff;
   color: #1d1d1d;
-  border-radius: 70px;
+  /* border-radius: 70px; */
   transition: all 0.3s linear;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
   -o-box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-  /* margin: 0; */
 }
 
 .flex-container {
@@ -213,6 +216,148 @@ a, a:hover {
   flex-direction: column;
   min-height: 100vh;
 }
+
+/*****************************
+ * ADD RECIPE BUTTON STYLING
+ ****************************/
+#add-recipe-button {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  height: 60px;
+  width: 60px;
+  border: none;
+  border-radius: 30px;
+  font-size: 36px;
+  background-color: #f67811;
+  color: #fff;
+  cursor: pointer;
+  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.25);
+  z-index: 999;
+}
+
+#add-recipe-button:hover,
+#add-recipe-button:focus {
+  right: 27px;
+  bottom: 27px;
+  height: 66px;
+  width: 66px;
+  border-radius: 33px;
+  font-size: 40px;
+}
+
+#add-recipe-button:focus {
+  outline: none;
+}
+
+/*****************************
+ * ADD RECIPE MODAL STYLING
+ ****************************/
+
+#modal-backdrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 3000;
+  background-color: rgba(0, 0, 0, 0.85);
+}
+
+#add-recipe-modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 3010;
+  overflow: scroll;
+}
+
+.hidden {
+  display: none;
+}
+
+.modal-dialog {
+  width: auto;
+  max-width: 600px;
+  min-width: 350px;
+  min-height: 300px;
+  margin: 40px auto;
+  background-color: #fff;
+  border-radius: 15px;
+}
+
+.modal-header {
+  position: relative;
+  padding: 10px 20px;
+}
+
+.modal-header h3 {
+  margin: 0;
+  font-size: 28px;
+}
+
+#modal-close {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  font-size: 24px;
+  border: none;
+  background: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.modal-body {
+  padding: 20px;
+}
+
+.recipe-input-element {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin: 10px 0;
+}
+
+.recipe-input-element > label {
+  font-weight: 600;
+  flex: 1 75px;
+  margin-right: 10px;
+}
+
+.recipe-input-element input {
+  flex: 6 200px;
+  padding: 8px;
+  font-size: 20px;
+  border: 1px solid #aaa;
+}
+
+.recipe-fieldset {
+  flex: 1 100%;
+  border: 1px solid #ababab;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px 10px 20px 10px;
+}
+
+#modal-cancel,
+#modal-accept {
+  margin-right: 20px;
+}
+
+#modal-cancel {
+  color: #333;
+  background-color: #fff;
+}
+
+#modal-cancel:hover {
+  background-color: #eee;
+}
+/**** END ADD RECIPE MODAL STYLE ****/
 
 /*ALSO needed to prevent modal:close from causeing background and content to shift. */
 .modal-open {
