fixed error missing include handlebars JS file

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@ Date: 11/2/2019 -->
     <!-- SVG icons from Font Awesome: http://fontawesome.com/ -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" crossorigin="anonymous">
 
-    <!-- Our custom CSS -- Bootstrap overrides to customize colors and background -->
+    <!-- Our custom CSS  Bootstrap overrides to customize colors and background -->
     <!-- heather's note: changing filename from style.css to custom.css to
          adhere to standards re: adding your own custom css on top of bootstrap,
          see: https://uxplanet.org/how-to-customize-bootstrap-b8078a011203 -->
@@ -61,7 +61,6 @@ Date: 11/2/2019 -->
 
     <!-- #region Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!--
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
@@ -71,7 +70,6 @@ Date: 11/2/2019 -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-  -->
     <!-- #endregion -->
 </body>
 
