--- a/views/partials/filters.handlebars
+++ b/views/partials/filters.handlebars
@@ -1,5 +1,6 @@
 <!-- Filters -->
-<div class="filters-container">
+<div class="filters-container d-flex">
+
   <div class="filter-input-container">
     <label for="filter-time">
       <div class="filter-header">
@@ -19,19 +20,18 @@
   </div>
 
   <div class="filter-input-container">
-    <label for="filter-budget">
+    <label for="filter-complexity">
       <div class="filter-header">
-        <img class="filter-img" src="images/budget.png" alt="budget">
-        <span class="filter-label">Budget</span>
+        <img class="filter-img" src="images/recipes.png" alt="complexity">
+        <span class="filter-label">Complexity</span>
       </div>
     </label>
     <div class="filter-input-element">
-      <select id="filter-time" class="filter-input" name="filter-time">
+      <select id="filter-complexity" class="filter-input" name="filter-complexity">
         <option selected value="">Any</option>
-        <option>Broke</option>
-        <option>Thrifty</option>
-        <option>Average</option>
-        <option>Spendy</option>
+        <option>Easy</option>
+        <option>Medium</option>
+        <option>Hard</option>
       </select>
     </div>
   </div>
