fixed missing /div tag in filters

--- a/views/partials/filters.handlebars
+++ b/views/partials/filters.handlebars
@@ -8,7 +8,7 @@
       <input type="text" name="filter-text" id="filter-text" class="filter-input">
     </div>
   </div>
-  
+
   <div class="filter-input-container">
     <label for="filter-time">
       <div class="filter-header">
@@ -78,3 +78,4 @@
 
   <button id="filter-update-button" class="action-button">Search</button>
 </div><!-- End of Filters -->
+</div>
