--- a/views/partials/jumbotron.handlebars
+++ b/views/partials/jumbotron.handlebars
@@ -7,6 +7,11 @@
       </div>
       <div class="col-md-6 add-your-own-block">
         <div class="col accent">or add your own!</div>
+        <div class="col accent">
+          <button type="button"  class="add-recipe-button" data-toggle="modal" data-target="#addRecipeModal" title="Click to add your own recipe">
+            <i class="fa fa-plus"></i>
+          </button>
+        </div>
       </div>
     </div><!--end of row-->
 </div><!--end of jumbotron -->
