--- a/views/partials/filters.handlebars
+++ b/views/partials/filters.handlebars
@@ -3,7 +3,12 @@
 <div class="filters-container">
 
   <div class="filter-input-container">
-    <label for="filter-text" class="filter-input-label">Text</label>
+    <label for="filter-text">
+      <div class="filter-header">
+        <img class="filter-img" src="images/cooking.png" alt="cooking">
+        <span class="filter-label">Recipe Name</span>
+      </div>
+    </label>
     <div class="filter-input-element">
       <input type="text" name="filter-text" id="filter-text" class="filter-input">
     </div>
