Added script tags for index.js and recipeTemplate.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,6 +29,9 @@ Date: 11/2/2019 -->
     <link href="https://fonts.googleapis.com/css?family=Ramaraja|Solway:400,700|Supermercado+One&display=swap" rel="stylesheet">
 
     <title>snacc.io | make food happen.</title>
+
+    <script src="/recipeTemplate.js"></script>
+    <script src="/index.js" charset="utf-8" defer></script>
 </head>
 
 <body id="main">
@@ -36,6 +39,7 @@ Date: 11/2/2019 -->
 
     <!-- #region Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="/index.js">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
