Include handlebars.js link in main.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,7 @@ Date: 11/2/2019 -->
 
     <title>snacc.io | make food happen.</title>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.5.3/handlebars.runtime.js"></script>
     <script src="/recipeTemplate.js"></script>
     <script src="/index.js" charset="utf-8" defer></script>
 </head>
