--- a/views/partials/addRecipe.handlebars
+++ b/views/partials/addRecipe.handlebars
@@ -4,7 +4,7 @@ aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close modal-hide-button" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
           </button>
       </div>
@@ -69,7 +69,7 @@ aria-hidden="true">
     </div>
     <div class="modal-footer">
       <button type="button" id="modal-cancel" class="btn btn-secondary modal-hide-button action-button" data-dismiss="modal">Cancel</button>
-      <button type="button" id="modal-accept" class="action-button">Create Post</button>
+      <button type="button" id="modal-accept" class="action-button modal-hide-button">Create Post</button>
     </div>
   </div>
 </div>
