--- a/views/partials/addRecipe.handlebars
+++ b/views/partials/addRecipe.handlebars
@@ -1,75 +1,50 @@
-<!-- Modal -->
-<div class="modal fade" id="addRecipeModal" tabindex="-1" role="dialog" aria-labelledby="addRecipeModalLabel"
-aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-          <button type="button" class="close modal-hide-button" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-          </button>
-      </div>
-      <div class="modal-body">
-
-        <!-- Recipe Name -->
-        <div class="recipe-input-element">
-          <label for="recipe-name-input">Recipe Name</label>
-          <input type="text" id="recipe-name-input"></input>
-        </div>
-
-        <!-- Recipe Cook Time -->
-        <div class="recipe-input-element">
-          <label for="recipe-time-input">Cook Time</label>
-          <input type="number" id="recipe-time-input"></input>
-        </div>
-
-        <!-- Recipe Complexity -->
-        <div class="recipe-input-element">
-          <fieldset id="recipe-complexity-fieldset" class="recipe-fieldset">
-            <legend>Complexity</legend>
-            <div>
-              <input type="radio" name="recipe-complexity" id="recipe-complexity-easy" value="easy" checked>
-              <label for="recipe-condition-easy">Easy</label>
+<!-- Contact Modal -->
+<div class="modal fade" id="addRecipeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-            <div>
-              <input type="radio" name="recipe-complexity" id="recipe-complexity-medium" value="medium" checked>
-              <label for="recipe-condition-medium">Medium</label>
-            </div>
-            <div>
-              <input type="radio" name="recipe-complexity" id="recipe-complexity-hard" value="hard" checked>
-              <label for="recipe-condition-hard">Hard</label>
-            </div>
-          </fieldset>
-        </div>
+            <form role="form" action="javascript:submitRecipe()" method="POST">
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <!--Buffers column on left-->
+                    <div class="col-lg-8 m-2">
 
-        <!-- Recipe Servings Made -->
-        <div class="recipe-input-element">
-          <label for="recipe-servings-input">Servings</label>
-          <input type="number" id="recipe-servings-input"></input>
-        </div>
+                        <input type="hidden" name="_next" value="#" />
+                        <input type="hidden" name="_subject" value="New submission!" />
+                        <div class="form-group">
+                            <label for="InputName">Your Name</label>
+                            <input type="text" class="form-control" name="name" id="InputName"
+                                placeholder="Enter Name" >
+                        </div>
+                        <div class="form-group">
+                            <label for="InputEmail">Your Email</label>
 
-        <!-- Recipe Photo URL -->
-        <div class="recipe-input-element">
-          <label for="recipe-photo-input">Photo URL</label>
-          <input type="text" id="recipe-photo-input">
-        </div>
+                            <input type="email" class="form-control" id="InputEmail" name="_replyto"
+                                placeholder="Enter Email" >
+                        </div>
+                        <div class="form-group">
+                            <label for="InputMessage">Message</label>
 
-        <!-- Recipe Credit Name -->
-        <div class="recipe-input-element">
-          <label for="recipe-credit-name-input">Recipe Author</label>
-          <input type="text" id="recipe-credit-name-input">
-        </div>
+                            <textarea name="InputMessage" id="InputMessage" class="form-control" rows="5"
+                                ></textarea>
+                        </div>
 
-        <!-- Recipe Credit URL -->
-        <div class="recipe-input-element">
-          <label for="recipe-credit-URL-input">Recipe URL</label>
-          <input type="text" id="recipe-credit-URL-input">
-        </div>
 
-      </div>
+                    </div>
+                    <hr class="hidden-lg">
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+
+                    <input type="submit" name="submit" id="submit" value="SUBMIT" class="btn btn-info pull-right">
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="modal-footer">
-      <button type="button" id="modal-cancel" class="btn btn-secondary modal-hide-button action-button" data-dismiss="modal">Cancel</button>
-      <button type="button" id="modal-accept" class="action-button modal-hide-button">Create Post</button>
-    </div>
-  </div>
 </div>
