--- a/views/partials/contactModal.handlebars
+++ b/views/partials/contactModal.handlebars
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
 
                     <input type="submit" name="submit" id="submit" value="SUBMIT" class="btn btn-info pull-right">
                 </div>
