Made submit button close modal

--- a/views/partials/addRecipe.handlebars
+++ b/views/partials/addRecipe.handlebars
@@ -42,7 +42,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
 
-                    <input type="submit" name="submit" id="submit" value="SUBMIT" class="btn btn-info pull-right">
+                    <input type="submit" name="submit" id="submit" data-dismiss="modal" value="SUBMIT" class="btn btn-info pull-right">
                 </div>
             </form>
         </div>
