--- a/views/partials/addRecipe.handlebars
+++ b/views/partials/addRecipe.handlebars
@@ -17,42 +17,42 @@
                         <div class="form-group">
                             <label for="recipe-name-input">Recipe Name</label>
                             <input type="text" class="form-control"  id="recipe-name-input"
-                                placeholder="Enter Recipe Name" >
+                                placeholder="Enter Recipe Name" required>
                         </div>
                         <!-- Recipe Cook Time -->
                         <div class="form-group">
                             <label for="recipe-time-input">Cook Time</label>
 
                             <input type="number" class="form-control" id="recipe-time-input" 
-                                placeholder="Enter Cook Time" >
+                                placeholder="Enter Cook Time" required>
                         </div>
                         <!-- Recipe Serving Size -->
                         <div class="form-group">
                             <label for="recipe-servings-input">Servings</label>
 
                             <input type="number" class="form-control" id="recipe-servings-input" 
-                                placeholder="Enter # of servings" >
+                                placeholder="Enter # of servings" required>
                         </div>
                         <!-- Recipe Photo Input -->
                         <div class="form-group">
                             <label for="recipe-photo-input">Image URL</label>
 
                             <input type="text" class="form-control" id="recipe-photo-input" 
-                                placeholder="Please enter a valid URL" >
+                                placeholder="Please enter a valid URL" required>
                         </div>                        
                         <!-- Recipe Credit Name Input -->
                         <div class="form-group">
                             <label for="recipe-credit-name-input">Credit Name</label>
 
                             <input type="text" class="form-control" id="recipe-credit-name-input" 
-                                placeholder="Please enter the credit source" >
+                                placeholder="Please enter the credit source" required>
                         </div>   
                         <!-- Recipe Credit URL Input -->
                         <div class="form-group">
                             <label for="recipe-credit-URL-input">Credit URL</label>
 
                             <input type="text" class="form-control" id="recipe-credit-URL-input" 
-                                placeholder="Please enter the source URL" >
+                                placeholder="Please enter the source URL" required>
                         </div>   
                     </div>
                     <hr class="hidden-lg">
