changed button to call handleButtonClick

--- a/views/partials/addRecipe.handlebars
+++ b/views/partials/addRecipe.handlebars
@@ -8,7 +8,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form role="form" action="javascript:submitRecipe()" method="POST">
+            <form role="form" action="javascript:handleModalAcceptClick()" method="POST">
                 <div class="row">
                     <div class="col-lg-2"></div>
                     <!--Buffers column on left-->
